--- a/AI-050/m01.md
+++ b/AI-050/m01.md
@@ -3,6 +3,7 @@
 
 https://learn.microsoft.com/ja-jp/training/modules/explore-azure-openai/
 
+- 機械学習（マシンラーニング）、AI、生成AIについて理解する
 - Azure OpenAI ワークロードについて説明し、Azure OpenAI Service にアクセスする
 - 生成 AI モデルについて理解する
 - Azure OpenAI の言語、コード、イメージの機能について理解する
