--- a/AI-050/m02.md
+++ b/AI-050/m02.md
@@ -57,24 +57,35 @@ https://cardinal-moon.hatenablog.com/entry/tokenize_and_subword
 私/は/日本人/です/。
 ```
 
+トークン＝単語というわけではなく、単語がさらに小さい複数のトークンに分割される場合もある（サブワード分割）。
+
 ■サブワード分割（サブワード正則化）
 
-ChatGPTにおけるサブワード分割とは、テキストを分割する単位のことです。
-サブワード分割は、ニューラル言語処理の分野で広く使われている手法であり、機械翻訳や自然言語生成などに応用されています¹。
-サブワード分割には、Byte Pair Encoding (BPE) やユニグラム言語モデルなどのアルゴリズムがあります²。
-これらのアルゴリズムは、データ圧縮に基づいて、頻出する文字列や単語をトークンとして扱います³。
-このようにして、テキストの長さを短くし、語彙数を減らすことができます⁴。
+ChatGPTでは、Byte Pair Encoding (BPE) アルゴリズムを使用して、テキストを「サブワード分割」（トークナイズ）している。
+
+サブワードは単語よりも小さくなる場合がある。たとえば`Azure OpenAI Service`は、`Az/ure/ Open/AI/ Service`のようにサブワード分割される。
+
+サブワード分割は、ニューラル言語処理の分野で広く使われている手法であり、機械翻訳や自然言語生成などに応用されている。
 
 ■BPE（Byte Pair Encoding）
 
-ChatGPTは、Byte Pair Encoding (BPE) というアルゴリズムでトークンを生成しており、頻出する文字列や単語をトークンとして扱います²。
+ChatGPTは、Byte Pair Encoding (BPE) というアルゴリズムでトークンを生成しており、頻出する文字列や単語をトークンとして扱う。
 
-BPEとは、Byte Pair Encodingの略で、テキストを圧縮するアルゴリズムの一種です¹。BPEでは、テキストをバイト単位で分割し、最も頻出するバイトのペアを新しいバイトに置き換えていきます²。このようにして、テキストの長さを短くし、語彙数を減らすことができます³。
-
-ChatGPTでは、BPEを用いてテキストをトークンに変換しています⁴。トークンとは、テキストを分割する単位のことで、文字や単語の一部などがトークンになります¹。BPEによってトークン化されたテキストは、ChatGPTのモデルに入力されて処理されます⁴。
-
-ChatGPTでは、BPEというアルゴリズムでトークンを生成しています⁵。BPEでは、テキストをバイト単位で分割し、最も頻出するバイトのペアを新しいバイトに置き換えていきます⁶。例えば、「こんにちは」というテキストは、2つのトークンに分割されます。`こんにちは` -> `こんにちは` + `</s>`。`</s>`は文末を表す特殊なトークンです。一方、「Hello」というテキストは、5つのトークンに分割されます。`Hello` -> `H` + `el` + `lo` + `!` + `</s>`。このように、英語の場合は文字や単語の一部がトークンになることがあります。
+BPEとは、Byte Pair Encodingの略で、テキストを圧縮するアルゴリズムの一種。BPEでは、テキストをバイト単位で分割し、最も頻出するバイトのペアを新しいバイトに置き換えていく。
 
 ■パラメーター
 
 ■温度（temperature）
+
+※「気温」とも
+
+■知識チェック
+
+https://learn.microsoft.com/ja-jp/training/modules/get-started-openai/9-knowledge-check
+
+- 第1問: ChatGPT の機能にアクセスする目的でデプロイできる Azure OpenAI 基本モデルは何ですか?
+  - gpt-35-turbo
+- 第2問: 返される入力候補のランダム性またはクリエイティブ性を変更するには、どのパラメーターを調整できますか?
+  - 温度（気温、temperature）
+- 第3問: 会話イン、メッセージアウトのシナリオをサポートできる Azure OpenAI Studio プレイグラウンドはどれですか?
+  - チャット
