--- a/AI-050/m03.md
+++ b/AI-050/m03.md
@@ -111,3 +111,14 @@ Azure Key Vault
 ■参考: 関数呼び出し
 
 https://learn.microsoft.com/ja-jp/azure/ai-services/openai/how-to/function-calling
+
+■知識チェック
+
+https://learn.microsoft.com/ja-jp/training/modules/build-language-solution-azure-openai/6-knowledge-check
+
+- 第1問: Azure OpenAI リソースに要求を行うために必要なリソース値は何ですか?
+  - キー、エンドポイント、デプロイ名
+- 第2問: デプロイされた Azure OpenAI モデルと対話するために使用できる 3 つのエンドポイントは何ですか?
+  - Completion、ChatCompletion、Embeddings
+- 第3問: Azure OpenAI で「会話の次の入力候補(next completion of a conversation)」をモデル化するために使用できる最適なエンドポイントは何ですか?
+  - ChatCompletion
