--- a/AI-050/m04.md
+++ b/AI-050/m04.md
@@ -2,9 +2,15 @@
 
 https://learn.microsoft.com/ja-jp/training/modules/apply-prompt-engineering-azure-openai/
 
-■プロンプトエンジニアリングとは
+■プロンプト（prompt）とは？
 
-LLM をより適切に活用するようにプロンプトを設計し、最適化するプロセス。
+AIシステムに対する指示・命令。基本的には（人間の相手に作業を依頼するように）自然言語で命令すればよい。
+
+■プロンプトエンジニアリングとは？
+
+大規模言語モデルをより適切に活用するようにプロンプトを設計・最適化するプロセス。
+
+最適な結果が得られるよう、プロンプトを工夫する。
 
 ■プロンプトエンジニアリングの手法
 
@@ -33,13 +39,13 @@ Is the statement "Several sources mention a chance of another large eruption" di
 
 最後の1行 `Is the statement "Several sources mention a chance of another large eruption" directly implied or stated by the snippets?` が、「最後に繰り返された命令」。
 
-なお、上記の例で `----` と書かれている部分は「セクションマーカー」（後述）。指示とコンテンツを分けたりするのに使用される。
+なお、上記の例で `----` と書かれている部分は「セクションマーカー」（後述）。「指示」と「コンテンツ」を分けたりするのに使用される。上記では「スニペット」（プライマリコンテンツ）と、その他の命令を分けるのに使用されている。
 
 ■セクションマーカー
 
 https://zenn.dev/zawawahoge/articles/4519112f1ad5ed
 
--または=を4以上の2の冪乗(4, 8, 16, 32)文字数分だけ書くのがおすすめ。
+`-` または `=` を4以上の2の冪乗(べきじょう、2^2=4, 2^3=8, 2^4=16 など)文字数分だけ書くのがおすすめ。
 
 ```
 ----
@@ -52,7 +58,7 @@ https://zenn.dev/zawawahoge/articles/4519112f1ad5ed
 ================================
 ```
 
-これらは１トークンとしてカウントされる。
+これらは 1 トークンとしてカウントされる。
 
 ■プライマリ コンテンツ(primary content)
 
@@ -127,16 +133,85 @@ The key takeaway of the message is
 
 `The key takeaway of the message is`がキュー。
 
-
 ■精度を高めるようにコンテキストを提供する
 
-- システムメッセージ(System message)
-- 会話履歴
-- フューショット学習(Few-shot learning)
-  - 少数の例文を提示する
-  - ファインチューニング不要
-  - 参考: https://atmarkit.itmedia.co.jp/ait/articles/2308/03/news016.html
-- タスクの分割(Break the task down)
-  - https://learn.microsoft.com/ja-jp/azure/ai-services/openai/concepts/advanced-prompt-engineering?pivots=programming-language-chat-completions#break-the-task-down
-  - 
-- 思考の連鎖(Chain of thought prompting)
+■システムメッセージ(System message)
+■会話履歴
+
+■フューショット学習(Few-shot learning)
+
+- 少数の例文を提示する
+- ファインチューニング不要
+- 参考: https://atmarkit.itmedia.co.jp/ait/articles/2308/03/news016.html
+
+
+■タスクの分割(Break the task down)
+
+https://learn.microsoft.com/ja-jp/azure/ai-services/openai/concepts/advanced-prompt-engineering?pivots=programming-language-chat-completions#break-the-task-down
+
+タスクを、より小さなステップに分割する。
+
+```
+段落を読んでください。
+---
+段落
+John Smith は Lucy Smith と結婚しています。 5 人の子供がいて、Microsoft でソフトウェア エンジニアとして働いています。
+---
+次に、ファクト クレームを抽出してください。
+
+最後に、これらをファクトチェックするクエリを発行してください。クエリを発行する場合は、関数 SEARCH("query") を使用します。
+
+ファクト クレーム:
+
+```
+
+上記の例では、「（1）段落を読む」「（2）ファクトクレームを抽出する」「（3）ファクトクレームをチェックするクエリを発行する」の3つに、タスクを分割して、指示を出している。
+
+`John Smith は Lucy Smith と結婚しています。 5 人の子供がいて、Microsoft でソフトウェア エンジニアとして働いています。`はプライマリコンテンツ。
+
+`段落を読んでください。`、`次に、ファクト クレームを抽出してください。`、`最後に、これらをファクトチェックするクエリを発行してください。クエリを発行する場合は、関数 SEARCH("query") を使用します。`は指示。
+
+最後の `ファクト クレーム:` はキュー(Cues)。
+
+■思考の連鎖(Chain of thought prompting)
+
+「タスクを分割する」では、ユーザーがタスクを分けて指示をするが、「思考の連鎖」では、この部分もAIに実施させる。ステップバイステップで（段階的に、ステップを分けて）考えるように指示を出す。
+
+```
+シドニーで開催されたオリンピックで最も表彰された (メダル数が最大の) 個人アスリートは誰でしたか? 応答でステップバイステップのアプローチを取り、ソースを引用し、最終的な回答を次の形式で伝える前に推論を行います。
+
+回答は次のとおりです: <name>
+```
+
+`応答でステップバイステップのアプローチを取り`や`最終的な回答を次の形式で伝える前に推論を行います`という部分が、「思考の連鎖」を指示している部分。
+
+応答例:
+```
+ステップ 1: シドニーオリンピックの年を特定します。 シドニー オリンピックは 2000 年に開催されました。
+
+ステップ 2: 2000 年のシドニー オリンピックで複数のメダルを獲得した個人アスリートのリストを見つけます。
+
+オリンピックの公式 Web サイトによると、2000 年シドニー オリンピックで複数のメダルを獲得した個人アスリートが何人かいました。 注目すべき名前の一部を次に示します。
+• Ian Thorpe (オーストラリア) - 金 3 個、銀 2 個、銅 0 個
+• Pieter van den Hoogenband (オランダ) - 金 2 個、銀 0 個、銅 2 個
+• Lenny Krayzelburg (アメリカ) - 金 3 個、銀 0 個、銅 0 個
+• Inge de Bruijn (オランダ) - 金 3 個、銀 1 個、ブロンズ 0 個
+
+ステップ 3: 最もメダルの多いアスリートを特定します。 2000 年シドニー オリンピックで複数のメダルを獲得した個人アスリートのリストを確認した後、最もメダルの多いアスリートは、オーストラリアの Ian Thorpe であり、合計 5 個のメダル (金 3 個と銀 2 個) を獲得したことがわかります。
+
+したがって、回答は次のとおりです: Ian Thorpe
+```
+
+■知識チェック
+
+https://learn.microsoft.com/ja-jp/training/modules/build-language-solution-azure-openai/6-knowledge-check
+
+- 第1問: 開発者が Azure OpenAI モデルのパフォーマンスを最適化するにはどうすればよいですか?
+  - 明確でわかりやすい指示を出す
+- 第2問: プロンプトのシステム メッセージの目的は何ですか?
+  - 応答を導くのに役立つ指示、視点、またはその他の情報をモデルに与える
+- 第3問: AI モデルに会話履歴を提供する目的は何ですか?
+  - モデルが同様の方法で応答できるようになり、ユーザーはその後のクエリで以前のコンテンツを参照できるようになる
+
+
+https://learn.microsoft.com/ja-jp/training/modules/apply-prompt-engineering-azure-openai/6-knowledge-check
