--- a/AI-050/m04.md
+++ b/AI-050/m04.md
@@ -4,21 +4,75 @@ https://learn.microsoft.com/ja-jp/training/modules/apply-prompt-engineering-azur
 
 ■プロンプト（prompt）とは？
 
-AIシステムに対する指示・命令。基本的には（人間の相手に作業を依頼するように）自然言語で命令すればよい。
+AIシステムに対する指示・命令。
 
-■プロンプトエンジニアリングとは？
+基本的には（人間の相手に作業を依頼するように）自然言語で命令すればよい。
 
-大規模言語モデルをより適切に活用するようにプロンプトを設計・最適化するプロセス。
+ただし、AIが生成するコンテンツには若干のランダム性があり、同じプロンプトから必ず同じ出力が得られるとは限らない。
 
-最適な結果が得られるよう、プロンプトを工夫する。
+また、AIのモデルが更新されるにつれ、同じプロンプトに対して異なる結果が返されるようになることがありうる。
 
-■プロンプトエンジニアリングの手法
+■プロンプトエンジニアリング(prompt engineering)とは？
 
 https://learn.microsoft.com/ja-jp/azure/ai-services/openai/concepts/prompt-engineering
 
 https://learn.microsoft.com/ja-jp/azure/ai-services/openai/concepts/advanced-prompt-engineering
 
-■明確な命令から開始する(Start with clear instructions) / 最後に命令を繰り返す（Repeat instructions at the end）
+大規模言語モデルをより適切に活用するようにプロンプトを設計・最適化するプロセス。
+
+AIに対し、何をしてほしいのかをうまく伝えるテクニック。
+
+最適な結果が得られるよう、プロンプトを工夫する。
+
+AIを使いこなすに当たって重要なスキル。
+
+プロンプトエンジニアリングでは、試行錯誤や実験を通じて、最適なプロンプトを見つけることが重要。
+
+目的やAIモデルが異なる場合、別の形のプロンプトが適切である場合がある。
+
+■手法(1)セクションマーカーを使う
+
+セクションマーカー（ `----` など） を使用して、コンテンツ（処理すべき文章）と命令を分ける。
+
+プライマリ コンテンツ(primary content): モデルによって処理または変換される何らかのテキスト。
+
+指示(instructions):モデルに対する命令。
+
+
+![Alt text](image-1.png)
+
+`以下の文章を英語に翻訳してください。結果の文章だけを出力してください。`が命令。
+
+`----`がセクションマーカー。
+
+`こんにちは、私の名前は山田です。`がコンテンツ（プライマリコンテンツ）。
+
+■参考: セクションマーカーの書き方は？
+
+https://zenn.dev/zawawahoge/articles/4519112f1ad5ed
+
+`-` または `=` を4以上の2の冪乗(べきじょう、2^2=4, 2^3=8, 2^4=16 など)文字数分だけ書くのがおすすめ。
+
+```
+----
+--------
+----------------
+--------------------------------
+====
+========
+================
+================================
+```
+
+これらはいずれも 1 トークンとしてカウントされる。
+
+■手法(2)明確な命令から開始する(Start with clear instructions)
+
+プロンプトを明確な命令から開始する。AIモデルに対して、何をしてほしいかを最初に明確に伝える。
+
+■手法(3)最後に命令を繰り返す（Repeat instructions at the end）
+
+プロンプトの最後で命令を繰り返す（または、重要な命令を最後に伝える）ことが有効な場合がある（最新性バイアス）。
 
 ```
 Your task is to verify if the statement "Several sources mention a chance of another large eruption" is supported by a specific quote from the following set of snippets.
@@ -39,45 +93,8 @@ Is the statement "Several sources mention a chance of another large eruption" di
 
 最後の1行 `Is the statement "Several sources mention a chance of another large eruption" directly implied or stated by the snippets?` が、「最後に繰り返された命令」。
 
-なお、上記の例で `----` と書かれている部分は「セクションマーカー」（後述）。「指示」と「コンテンツ」を分けたりするのに使用される。上記では「スニペット」（プライマリコンテンツ）と、その他の命令を分けるのに使用されている。
 
-■セクションマーカー
-
-https://zenn.dev/zawawahoge/articles/4519112f1ad5ed
-
-`-` または `=` を4以上の2の冪乗(べきじょう、2^2=4, 2^3=8, 2^4=16 など)文字数分だけ書くのがおすすめ。
-
-```
-----
---------
-----------------
---------------------------------
-====
-========
-================
-================================
-```
-
-これらは 1 トークンとしてカウントされる。
-
-■プライマリ コンテンツ(primary content)
-
-https://learn.microsoft.com/ja-jp/azure/ai-services/openai/concepts/prompt-engineering#primary-content
-
-モデルによって処理または変換される何らかのテキスト。
-
-■指示(instructions)
-
-モデルに対する命令。
-
-```
-Can you please tell me how to get to the museum?
-Translate to French:
-```
-
-上記の例で、`Can you please tell me how to get to the museum?`がプライマリコンテンツ、`Translate to French:`が指示。
-
-■サポート コンテンツ(supporting content)
+■手法(4)サポート コンテンツ (supporting content)を指定する
 
 https://learn.microsoft.com/ja-jp/azure/ai-services/openai/concepts/prompt-engineering#supporting-content
 
@@ -87,16 +104,19 @@ https://learn.microsoft.com/ja-jp/azure/ai-services/openai/concepts/prompt-engin
 
 ```
 Workshop list:
-Title Description
+
 Planning Workshop Kickoff Please join us to kick off our workshop!
 Hear from our leaders about cross group priorities and learnings for the year ahead...
+----
 My Important Topics: prompt engineering, search, GPT models
+----
 Summarize the workshops above, grouped by my important topics:
 ```
 
 `My Important Topics: prompt engineering, search, GPT models`が、サポートコンテンツ。
 
-■基礎（根拠付け）コンテンツ(grounding context / grounding data)
+■手法(5)基礎（根拠付け）コンテキスト(grounding context / grounding data)を指定する
+
 
 https://learn.microsoft.com/ja-jp/azure/ai-services/openai/concepts/advanced-prompt-engineering?pivots=programming-language-chat-completions#provide-grounding-context
 
@@ -107,13 +127,16 @@ https://learn.microsoft.com/ja-jp/azure/ai-services/openai/concepts/advanced-pro
 システムメッセージ:
 ```
 あなたは、情報の検索を支援する AI アシスタントです。 以下のテキストからのみ回答を提供し、100 語以下で応答してください。
-"Microsoft では、より多くのユーザーが AI を使用して利益が得られるように、創造性を発揮し、生産性を高め、スキルを向上させる新しい方法を常に探しています。 これにより、お客様は...その結果、モデルが有害な応答を生成する可能性が低くなります。"
+----
+Microsoft では、より多くのユーザーが AI を使用して利益が得られるように、創造性を発揮し、生産性を高め、スキルを向上させる新しい方法を常に探しています。 これにより、お客様は...その結果、モデルが有害な応答を生成する可能性が低くなります。
+----
 100 語以下で回答します。 可能な限り箇条書きリストを使用します。
 ```
 
 `"Microsoft では、より多くのユーザーが AI を使用して利益が得られるように、創造性を発揮し、生産性を高め、スキルを向上させる新しい方法を常に探しています。 これにより、お客様は...その結果、モデルが有害な応答を生成する可能性が低くなります。"`の部分が基礎（根拠付け）コンテンツ。
 
-■キュー(Cues)
+■手法(6)キュー (Cues)を指定する。
+
 
 キュー (Cue) は、モデルの出力の "ジャンプスタート" として機能し、モデルを目的の出力に誘導するのに役立ちます。 多くの場合、これはプレフィックスであり、それに基づきモデルを構築できます。
 
@@ -133,19 +156,31 @@ The key takeaway of the message is
 
 `The key takeaway of the message is`がキュー。
 
-■精度を高めるようにコンテキストを提供する
-
-■システムメッセージ(System message)
-■会話履歴
-
-■フューショット学習(Few-shot learning)
-
-- 少数の例文を提示する
-- ファインチューニング不要
-- 参考: https://atmarkit.itmedia.co.jp/ait/articles/2308/03/news016.html
+■手法(7)システムメッセージ (system messages) とユーザーメッセージ (user messages)を使い分ける
 
 
-■タスクの分割(Break the task down)
+システムメッセージ:
+- AIに対して、指示や制限を行う
+- AIのパーソナリティ（個性）、回答の生成方法などを設定する
+- 応答を導くのに役立つ指示、視点、またはその他の情報をモデルに与える。
+
+ユーザーメッセージ:
+- AIと対話するユーザーが入力するメッセージ。
+- システムメッセージの設定に従って処理される。
+
+
+■手法(8)会話履歴を指定する
+
+■手法(9)フューショット学習 (few-shot learning)を使用する
+
+https://www.promptingguide.ai/jp/techniques/fewshot
+
+少数の例文を提示する。
+
+参考: https://atmarkit.itmedia.co.jp/ait/articles/2308/03/news016.html
+
+
+■手法(10)タスクを分割する(break task down)
 
 https://learn.microsoft.com/ja-jp/azure/ai-services/openai/concepts/advanced-prompt-engineering?pivots=programming-language-chat-completions#break-the-task-down
 
@@ -173,7 +208,10 @@ John Smith は Lucy Smith と結婚しています。 5 人の子供がいて、
 
 最後の `ファクト クレーム:` はキュー(Cues)。
 
-■思考の連鎖(Chain of thought prompting)
+■手法(11)思考の連鎖(chain of thought prompting)を行わせる
+
+https://www.promptingguide.ai/jp/techniques/cot
+
 
 「タスクを分割する」では、ユーザーがタスクを分けて指示をするが、「思考の連鎖」では、この部分もAIに実施させる。ステップバイステップで（段階的に、ステップを分けて）考えるように指示を出す。
 
