--- a/AI-050/m01.md
+++ b/AI-050/m01.md
@@ -57,7 +57,7 @@ https://learn.microsoft.com/ja-jp/training/modules/prepare-to-develop-ai-solutio
 - 単語列に対し、次に来る単語を確率分布で表したもの。
 - より自然な文章の並びに対して高い確率を割り当て、文章として成立しない並びには低い確率を割り当てる。
 
-イメージ:
+言語モデルのイメージ:
 
 ```
 日本の首都は[...]
@@ -172,7 +172,7 @@ https://platform.openai.com/examples
 - 社内文書を学習し、社内のノウハウをすばやく検索できるようにするチャットボット
 - コンタクトセンターの会話を文字起こし・AIで学習させて、問題の解決方法を提案するチャットボット
 
-■ハルシネーション（hallucination、幻覚）
+■ハルシネーション（hallucination、幻覚）とは？
 
 https://ja.wikipedia.org/wiki/%E5%B9%BB%E8%A6%9A_(%E4%BA%BA%E5%B7%A5%E7%9F%A5%E8%83%BD)
 
@@ -184,7 +184,9 @@ https://ja.wikipedia.org/wiki/%E5%B9%BB%E8%A6%9A_(%E4%BA%BA%E5%B7%A5%E7%9F%A5%E8
 
 https://ja.wikipedia.org/wiki/ChatGPT#%E6%9D%B1%E4%BA%AC%E5%A4%A7%E5%AD%A6
 
-2023年4月3日、東京大学は理事・副学長の太田邦史の署名付き文章で、全学生・教員向けにChatGPT、BingAIやBard等の生成AIの利用に関する注意喚起を行った。この文章では生成AIを『平和的かつ上手に制御して利用すれば』有益であるとする一方で技術的な課題があるとして、今後の社会への悪影響に対する懸念を表明した。また、生成AIの文章には嘘が含まれている可能性が高く、ChatGPTを使いこなすには、相当の専門的な知識が必要であり、回答を批判的に確認し、適宜修正することが必要であると指摘している。
+2023年4月3日、東京大学は理事・副学長の太田邦史（おおた くにひろ）の署名付き文章で、全学生・教員向けにChatGPT、BingAIやBard等の生成AIの利用に関する注意喚起を行った。この文章では生成AIを『平和的かつ上手に制御して利用すれば』有益であるとする一方で技術的な課題があるとして、今後の社会への悪影響に対する懸念を表明した。また、生成AIの文章には嘘が含まれている可能性が高く、ChatGPTを使いこなすには、相当の専門的な知識が必要であり、回答を批判的に確認し、適宜修正することが必要であると指摘している。
+
+[「ChatGPTの利用前提に全てを見直す方向へかじを切る」、東京大学の太田副学長](https://xtech.nikkei.com/atcl/nxt/column/18/02423/042300009/)
 
 ■Azure OpenAI Serviceとは？
 
@@ -344,8 +346,8 @@ https://learn.microsoft.com/ja-jp/legal/cognitive-services/openai/transparency-n
 https://learn.microsoft.com/ja-jp/training/modules/explore-azure-openai/9-knowledge-check
 
 - 第1問: ChatGPT、OpenAI、Azure OpenAI はどのように関連していますか?
-  - OpenAI: 生成 AI モデルを使用するチャットボットである ChatGPT を開発した研究所。
-  - ChatGPT: OpenAIが提供する、GPTを使用したチャットのサービス。
+  - OpenAI: [人工知能の開発を行っているアメリカの企業](https://ja.wikipedia.org/wiki/OpenAI)。生成 AI モデルを使用するチャットボットである ChatGPT を開発した。
+  - ChatGPT: OpenAI社が提供する、GPTを使用したチャットのサービス。
   - Azure OpenAI: Microsoftが提供するAIサービス。OpenAI の AI モデルの多くにアクセスできる。
 - 第2問: あなたはテキストの段落を要約しようとしています。 このワークロードの解決には、どの生成 AI モデル ファミリを使用しますか?
   - GPT
