--- a/AI-050/m02.md
+++ b/AI-050/m02.md
@@ -85,6 +85,14 @@ https://www.promptingguide.ai/jp/introduction/settings
   - この値を下げると、正確で事実に基づく回答が得られる
   - この値を上げると、多様な回答が得られる
 
+■TemperatureとTop_pはどのように調節すればよいのか？
+
+- 
+- [GPT-4モデルでは、Top_pパラメータは削除されている。]()
+  - https://isid-ai.jp/column/chatgpt-performance-comparison
+  - https://www.qes.co.jp/media/open-ai/a279
+
+
 ■知識チェック
 
 https://learn.microsoft.com/ja-jp/training/modules/get-started-openai/9-knowledge-check
