--- a/AI-050/m01.md
+++ b/AI-050/m01.md
@@ -207,13 +207,20 @@ https://it-trend.jp/words/chatbot
 
 「チャット」と「ボット」を組み合わせた言葉で、人工知能を活用した「自動会話プログラム」のこと。
 
+■例: マナミさん（LOHACO）
 https://lohaco.yahoo.co.jp/help/
 
 ![Alt text](image-14.png)
 
 チャットボットに生成AIを組み合わせることで、チャットボットが自然言語による質問や命令を理解し、応答できるようになった。
 
-## 参考: チャットボットのビジネスでの典型的な利用事例
+
+■例: AIさくらさん
+
+https://www.tifana.ai/
+
+
+## 参考: チャットボットの典型的な利用事例
 
 - 社内文書を学習し、社内のノウハウをすばやく検索できるようにするチャットボット
 - コンタクトセンターの会話を文字起こし・AIで学習させて、問題の解決方法を提案するチャットボット
@@ -309,7 +316,9 @@ Azure OpenAI Studio
 Azure OpenAI Serviceリソース
 └モデル
   ↑
-App Service Webアプリ
+OpenAI SDK
+  ↑
+App Service Webアプリ等
   ↑
 エンドユーザー（一般利用者）
 ```
