--- a/AI-050/m02.md
+++ b/AI-050/m02.md
@@ -2,50 +2,86 @@
 
 https://learn.microsoft.com/ja-jp/training/modules/get-started-openai/
 
-■Azure OpenAI Studioを利用する手順
+## Azure OpenAI Studioを利用する手順
 
 - Azure OpenAI Serviceの利用を申請する
   - https://aka.ms/oaiapply
-- 申請が承認されるまで待つ
+  - [申請に関する情報(by Azure サポートチーム)](https://jpaiblog.github.io/blog/2023/04/21/RequestAccess-to-AzureOpenAIService/)
 - Azure OpenAI Serviceリソースを作成する
 - モデルをデプロイする
-- モデルを利用する
-  - Azure OpenAI Studioから
-  - 独自のアプリから
+- Azure OpenAI Studioからモデルを利用する
+  - Completionプレイグラウンド
+  - Chatプレイグラウンド
+  - DALL-Eプレイグラウンド
 
-■モデルの種類
+## Azure OpenAI Service リソースの作成
 
+- [Azure portalから作成](https://learn.microsoft.com/ja-JP/azure/ai-services/openai/how-to/create-resource?pivots=web-portal)
+- [Azure CLIから作成](https://learn.microsoft.com/ja-JP/azure/ai-services/openai/how-to/create-resource?pivots=cli)
+- [Azure PowerShellから作成](https://learn.microsoft.com/ja-JP/azure/ai-services/openai/how-to/create-resource?pivots=ps)
+- [ARMテンプレート / Bicepから作成](https://learn.microsoft.com/ja-jp/azure/ai-services/create-account-resource-manager-template?tabs=portal)
+- [APIから作成](https://learn.microsoft.com/ja-jp/rest/api/cognitiveservices/accountmanagement/deployments/create-or-update?tabs=HTTP)
+
+1つのAzureリージョンに20個までAzure OpenAI Service リソースを作成できる。
+
+## Azure OpenAI Service リソースを作成できるリージョン
+
+Azureリソースが作成できるリージョンは、「リージョン別の利用可能な製品」で調べられる。
+
+例: 東日本リージョンと西日本リージョンのAzure OpenAI Serviceの対応状況:
+
+https://azure.microsoft.com/ja-jp/explore/global-infrastructure/products-by-region/?regions=japan-east,japan-west&products=cognitive-services
+
+2023/9現在、東日本リージョンではAzure OpenAI Serviceリソースを作成可能。西日本リージョンでは、作成が不可能。
+
+また、後述の「モデル」も、リージョンによって作成できる・できないの違いがあるので、注意。たとえば「gpt-35-turbo (0301)」は東日本リージョンでは使用できない。
+
+GPT-4: https://learn.microsoft.com/ja-jp/azure/ai-services/openai/concepts/models#gpt-4-models
+
+GPT-3.5: https://learn.microsoft.com/ja-jp/azure/ai-services/openai/concepts/models#gpt-35-models
+
+## モデルの種類
+
+- GPT-3.5
+  - gpt-35-turbo (0301): 4096 token, Completion APIに対応
+  - gpt-35-turbo (0613): 4096 token
+  - gpt-35-turbo-16k (0613): 16384 token
 - GPT-4
-- GPT 3.5
-- Embedded
+  - gpt-4 (0314): 8192 token
+  - gpt-4 (0613): 8192 token
+  - gpt-4-32k (0314): 32768 token
+  - gpt-4-32k (0613): 32768 token
+- Embeddings
+  - text-embedding-ada-002 (1) : 2046 token ※非推奨
+  - text-embedding-ada-002 (2) : 8191 token ※最新の機能を使用できる。推奨
 - DALL-E
+  - ※このモデルのデプロイは不要
 
-■モデルの詳細
+詳細:
+- 各モデルのインスタンスは1つだけデプロイできる。
+- (0301)や(0613)は、モデルのバージョンを表す。
+- (0301)と(0314)は、2024/7/5以降、廃止予定。
+- (0613)は、2023/6に追加された新バージョン。モデルがシステムメッセージにより従いやすくなり、操作性が向上している。
+- 16kや32kという部分は入力できるトークンの量を表す。
+- GPT-4はGPT-3.5よりも高い精度で問題を解くことができるが、よりコストがかかる。
+- GPT-3.5とGPT-4は Chat Completion APIに対応。
+- EmbeddingsはEmbeddings APIに対応。
+- 「gpt-35-turbo (0301)」はCompletion APIにも対応。その他のモデルは非対応。
 
-- gpt-35-turbo-16k
-  - OpenAIが開発した大規模な言語モデルの一種。
-  - 最大16,384個のトークン(テキストを分割した単位)を入力として受け付け可能
-  - 日本語では約15,000文字程度に相当
+## 参考: レガシ モデル
 
-■Azure OpenAI Studioとは
+https://learn.microsoft.com/ja-jp/azure/ai-services/openai/concepts/legacy-models
 
-Azure OpenAI Service を操作するためのWeb管理画面。
+GPT-3の「text-ada-001」など、2023 年 7 月 6 日以降の新しいデプロイでは使用できないモデルは「レガシ モデル」とされている。
 
-https://oai.azure.com
+## トークン
 
-■プレイグラウンド
-
-- Azure OpenAI Studio のインターフェイス
-- 独自のクライアント アプリケーションを開発することなく、デプロイされるモデルを実験するために使用できる
-
-■トークン
-
-Tokens are the basic units of a prompt - essentially words or word-parts in the text.
+トークンは、単語、または単語を分割したもの。
 
 以下のサイトで、テキストを入力し、そのトークン数を計算できる。
 https://platform.openai.com/tokenizer
 
-■トークナイズ
+## トークナイズ
 
 https://cardinal-moon.hatenablog.com/entry/tokenize_and_subword
 
@@ -59,7 +95,7 @@ https://cardinal-moon.hatenablog.com/entry/tokenize_and_subword
 
 トークン＝単語というわけではなく、単語がさらに小さい複数のトークンに分割される場合もある（サブワード分割）。
 
-■サブワード分割（サブワード正則化）
+## 参考: サブワード分割（サブワード正則化）
 
 ChatGPTでは、Byte Pair Encoding (BPE) アルゴリズムを使用して、テキストを「サブワード分割」（トークナイズ）している。
 
@@ -67,13 +103,36 @@ ChatGPTでは、Byte Pair Encoding (BPE) アルゴリズムを使用して、テ
 
 サブワード分割は、ニューラル言語処理の分野で広く使われている手法であり、機械翻訳や自然言語生成などに応用されている。
 
-■BPE（Byte Pair Encoding）
+## 参考: BPE（Byte Pair Encoding）
 
 ChatGPTは、Byte Pair Encoding (BPE) というアルゴリズムでトークンを生成しており、頻出する文字列や単語をトークンとして扱う。
 
 BPEとは、Byte Pair Encodingの略で、テキストを圧縮するアルゴリズムの一種。BPEでは、テキストをバイト単位で分割し、最も頻出するバイトのペアを新しいバイトに置き換えていく。
 
-■パラメーター
+## Azure OpenAI Studioとは
+
+Azure OpenAI Service を操作するためのWeb管理画面。
+
+https://oai.azure.com
+
+## プレイグラウンド
+
+- Azure OpenAI Studio のインターフェイス
+- 独自のクライアント アプリケーションを開発することなく、デプロイされるモデルを実験するために使用できる
+
+## Completionプレイグラウンド
+
+「text-in, text-out」インターフェース。
+
+## Chat プレイグラウンド
+
+「conversation-in, message-out」インターフェース。
+
+## DALL-E プレイグラウンド
+
+入力されたテキストに基づき画像を生成する。
+
+## パラメーター
 
 https://www.promptingguide.ai/jp/introduction/settings
 
@@ -85,15 +144,14 @@ https://www.promptingguide.ai/jp/introduction/settings
   - この値を下げると、正確で事実に基づく回答が得られる
   - この値を上げると、多様な回答が得られる
 
-■TemperatureとTop_pはどのように調節すればよいのか？
+## TemperatureとTop_pはどのように調節すればよいのか？
 
-- 
-- [GPT-4モデルでは、Top_pパラメータは削除されている。]()
+- GPT-4モデルでは、Top_pパラメータは削除されている。
   - https://isid-ai.jp/column/chatgpt-performance-comparison
   - https://www.qes.co.jp/media/open-ai/a279
 
 
-■知識チェック
+## 知識チェック
 
 https://learn.microsoft.com/ja-jp/training/modules/get-started-openai/9-knowledge-check
 
@@ -104,5 +162,5 @@ https://learn.microsoft.com/ja-jp/training/modules/get-started-openai/9-knowledg
   - したがって、ChatGPT(と同じ)機能を利用するには、GPT-3.5(-turbo)モデルをAzure OpenAI Serviceにデプロイすればよい。
 - 第2問: 返される入力候補のランダム性またはクリエイティブ性を変更するには、どのパラメーターを調整できますか?
   - 温度（気温、temperature）
-- 第3問: 会話イン、メッセージアウトのシナリオをサポートできる Azure OpenAI Studio プレイグラウンドはどれですか?
+- 第3問: 会話イン、メッセージアウト（「conversation-in, message-out」）のシナリオをサポートできる Azure OpenAI Studio プレイグラウンドはどれですか?
   - チャット
