--- a/AI-050/m01.md
+++ b/AI-050/m01.md
@@ -182,14 +182,18 @@ https://platform.openai.com/examples
 
 ## 生成AI利用上の一般的な問題点・注意点
 
-- AIに、機密情報や個人情報を入力すると、それらがAI側に記録されたりトレーニングに使用されたりする可能性がある。
-- AIの回答・生成には、誤り、不適切な提案、著作権の問題などが含まれる可能性がある。
+- AIに入力した情報は、それらがAI側のサービスに記録されたり、モデルのトレーニングに使用されたりする場合がある
+  - 機密情報や個人情報、社外秘の情報などはAIに入力しない。
+  - [Azure OpenAI では、モデルの再トレーニングに顧客データは使用されない。](https://learn.microsoft.com/ja-jp/azure/ai-services/openai/faq#----------------------------)
+- AIの回答・生成には、誤り、偏り、不適切な提案、著作権の問題などが含まれる場合がある
+  - AIの出力を確認して使用するのは利用者の責任となる。
+  - [マイクロソフトは商用のCopilotサービスやBing Chat Enterpriseの利用者に対し、AIで生成された出力に関する著作権のリスクを負うという新しいコミットメントを発表。](https://news.microsoft.com/ja-jp/2023/09/12/230912-copilot-copyright-commitment-ai-legal-concerns/)
 
 ## ハルシネーション（hallucination、幻覚）とは？
 
 https://ja.wikipedia.org/wiki/%E5%B9%BB%E8%A6%9A_(%E4%BA%BA%E5%B7%A5%E7%9F%A5%E8%83%BD)
 
-人工知能の幻覚（hallucination ハルシネーション）とは、人工知能が学習したデータからは正当化できないはずの回答を堂々とする現象である。
+人工知能の幻覚（hallucination ハルシネーション）は、人工知能が学習したデータからは正当化できないはずの回答を堂々とする現象。
 
 例えば、テスラの収益に関する知識がないチャットボットがこの現象に陥ると、もっともらしいと判断したランダムな数字（130.6億ドルのような）を内部的にピックアップして、間違っているにもかかわらずテスラの収益は130.6億ドルだと繰り返すようになる。そしてこのとき、人工知能の内部ではこの数字が自身の創造の産物だということに気付いている兆候がみられない。
 
@@ -224,6 +228,17 @@ https://www.tifana.ai/
 
 - 社内文書を学習し、社内のノウハウをすばやく検索できるようにするチャットボット
 - コンタクトセンターの会話を文字起こし・AIで学習させて、問題の解決方法を提案するチャットボット
+- アプリに組み込まれ、ユーザーの作業を支援するチャットボット（コパイロット: 副操縦士）
+  - 要約
+  - ドキュメント生成
+  - コード生成
+  - 作業プランの提示
+
+## 参考: Microsoft 365 Copilot
+
+![Alt text](image-15.png)
+
+![Alt text](image-16.png)
 
 ## Azure OpenAI Serviceとは？
 
@@ -380,7 +395,8 @@ https://learn.microsoft.com/ja-jp/training/modules/responsible-generative-ai/
 
 - 生成AIは、開発者が意図しない「有害な」情報を出力する可能性がある。
   - 例: レシピを生成するAI
-    - AIが生成したレシピに沿って調理したものが有害である（十分な加熱がされていない料理など）可能性がある
+    - AIが生成したレシピに沿って調理したものが有害である可能性がある
+      - 食材に対して十分な加熱がされないレシピが生成されるなど
   - 不快、軽蔑的、または差別的なコンテンツを生成する可能性
   - 事実に関する不正確さを含むコンテンツを生成する可能性
   - 違法または非倫理的な行動や慣行を奨励または支持するコンテンツを生成する可能性
@@ -390,7 +406,7 @@ https://learn.microsoft.com/ja-jp/training/modules/responsible-generative-ai/
   - コンテンツフィルタリングの適用
   - 検索拡張生成(RAG)により、信頼できるデータソースを使用する
 - 透明性をもたせる
-  - ユーザーに通知する
+  - テクノロジがどのように構築されているかについて、ユーザーに通知する
 - ユーザーからフィードバックを集める（ユーザーがフィードバックを送信できるようにする）
 - リリース前にレビューする
 
