--- a/AI-050/m02.md
+++ b/AI-050/m02.md
@@ -54,7 +54,8 @@ GPT-3.5: https://learn.microsoft.com/ja-jp/azure/ai-services/openai/concepts/mod
 - Embeddings
   - text-embedding-ada-002 (1) : 2046 token ※非推奨
   - text-embedding-ada-002 (2) : 8191 token ※最新の機能を使用できる。推奨
-- DALL-E
+- DALL-E 2
+  - dalle2: 1024文字
   - ※このモデルのデプロイは不要
 
 詳細:
