--- a/AI-050/m02.md
+++ b/AI-050/m02.md
@@ -11,7 +11,7 @@ https://learn.microsoft.com/ja-jp/training/modules/get-started-openai/
 - モデルをデプロイする
 - Azure OpenAI Studioからモデルを利用する
   - Completionプレイグラウンド
-  - Chatプレイグラウンド
+  - ChatGPTプレイグラウンド
   - DALL-Eプレイグラウンド
 
 ## Azure OpenAI Service リソースの作成
@@ -123,11 +123,29 @@ https://oai.azure.com
 
 ## Completionプレイグラウンド
 
-「text-in, text-out」インターフェース。
+- 「text-in, text-out」インターフェース。
+- 与えられたテキストの続きを生成する
+- あるプロンプト（初期テキスト）を入力として受け取り、そのテキストを自然に続ける形でテキストを生成
+- 一般的なテキスト生成タスク（文章の補完、質問への回答、短いエッセイの作成など）に使われる
 
-## Chat プレイグラウンド
+## ChatGPT プレイグラウンド
 
-「conversation-in, message-out」インターフェース。
+- 「conversation-in, message-out」インターフェース。
+- 対話型
+- ユーザーとの対話形式のテキスト生成に最適化
+- 一連のメッセージ（ユーザーとAIの間の会話）を入力として受け取り、次にAIが返すべきメッセージを出力
+
+## 参考: Azure OpenAI ServiceのChatGPTでできないこと
+
+![Alt text](image-19.png)
+
+![Alt text](image-17.png)
+
+![Alt text](image-20.png)
+
+※Markdown形式で表を出力させることは可能
+
+![Alt text](image-18.png)
 
 ## DALL-E プレイグラウンド
 
