--- a/AZ-104-2023/lp05.md
+++ b/AZ-104-2023/lp05.md
@@ -8,11 +8,16 @@
   - [ラボ4: バーチャル ネットワークを実装する](lab04cs.md)
 - オンプレミスとの接続
   - [VPN（モジュール6）](../AZ-303/mod03-03-vpn.md)
-  - [ExpressRoute（モジュール7）](../AZ-500/pdf/mod2/ExpressRouteまとめ.pdf)
-  - [Virtual WAN（モジュール7）](../AZ-104/mod05-04-virtualwan.md)
   - [ラボ5: サイト間の接続性 を実装する](lab05cs.md)
 - ルーティング/負荷分散
   - [PDF資料: Azureの負荷分散サービスのまとめ](pdf/Azure%E3%81%AE%E8%B2%A0%E8%8D%B7%E5%88%86%E6%95%A3%E3%82%B5%E3%83%BC%E3%83%93%E3%82%B9%E3%81%BE%E3%81%A8%E3%82%81.pdf)
     - Azure Load Balancer
     - Azure Application Gateway
   - [ラボ6: トラフィック管理を実装する](lab06cs.md)
+- 監視・デバッグ
+  - [Network Watcher](../AZ-104/pdf/mod11/Network%20Watcher.pdf)
+
+<!--
+  - [ExpressRoute（モジュール7）](../AZ-500/pdf/mod2/ExpressRouteまとめ.pdf)
+  - [Virtual WAN（モジュール7）](../AZ-104/mod05-04-virtualwan.md)
+-->
