--- a/AI-102/lp07.md
+++ b/AI-102/lp07.md
@@ -6,13 +6,29 @@ https://learn.microsoft.com/ja-jp/training/paths/build-custom-text-analytics/
 - モジュール2 カスタム固有表現認識
 - ※このラーニングパスのラボはありません。
 
-■テキスト分類とは？
+■カスタム テキスト分類 (custom text classification) とは？
+
+https://learn.microsoft.com/ja-jp/azure/ai-services/language-service/custom-text-classification/overview
 
 テキスト分類: テキストに対して「ラベル」を割り当てる処理。ジャンル分け。
 
-■NER(Named Entity Recognition)とは？
+事前に定義したカスタム クラスにテキストを分類するカスタム AI モデルを構築できる。
 
-一般的には「固有表現抽出」とも。
+例: ドキュメント（映画の紹介文）から、映画のジャンル「ミステリー」「ドラマ」「スリラー」「コメディー」「アクション」などを抽出してラベルづけ。
+https://learn.microsoft.com/ja-jp/azure/ai-services/language-service/custom-text-classification/quickstart?tabs=multi-classification&pivots=rest-api
+
+例: 受信したメールの内容に応じて、自動で分類する
+https://learn.microsoft.com/ja-jp/azure/ai-services/language-service/custom-text-classification/tutorials/triage-email
+
+例: ニュース記事を自動でカテゴリに分類する
+https://www.softbanktech.co.jp/special/blog/dx_station/2022/0004/
+
+
+■固有表現認識 NER(Named Entity Recognition)とは？
+
+https://learn.microsoft.com/ja-jp/azure/ai-services/language-service/named-entity-recognition/overview
+
+「名前付きエンティティの認識」や「固有表現抽出」とも。
 
 https://ja.wikipedia.org/wiki/%E5%9B%BA%E6%9C%89%E8%A1%A8%E7%8F%BE%E6%8A%BD%E5%87%BA
 
@@ -28,11 +44,23 @@ https://nlpcloud.com/ja/nlp-named-entity-recognition-ner-api.html
 
 ＞「John」を「人名」、「Web developer」を「職種」、「Google」を「会社」として自動検出。
 
+■NER(Named Entity Recognition)の利用事例
+
+アプリでの利用例: メールの日時を認識してスケジュールの作成を提案
+https://xtech.nikkei.com/atcl/nxt/column/18/02158/083100005/
+
+名刺から組織名（企業名）を認識し、その企業のニュースを配信するサービス（Sansan様）
+https://sin.sansan.com/best_practice/news/
+
+商品検索での利用例:「白い丸いカクテルテーブル」という文章から、「白」を「商品の色」、「丸」を「商品の形」、「カクテルテーブル」を「商品の種類」に分類して、適切な検索結果を提供
+https://sharethis.com/ja/data-topics/2022/09/named-entity-recognition-ner/
+
+
 ■カスタムNERとは？
 
-[カスタムNER(Named Entity Recognition)](https://learn.microsoft.com/ja-jp/azure/cognitive-services/language-service/custom-named-entity-recognition/overview)
+https://learn.microsoft.com/ja-jp/azure/ai-services/language-service/custom-named-entity-recognition/overview
 
-カスタム NER を使用すると、ユーザーはカスタム AI モデルを作成して、テキストから、業界固有のエンティティを抽出できる。
+カスタム AI モデルを作成して、テキストから、業界固有のエンティティを抽出できる。
 
 例えば、金融業界で扱われるテキストに現れる、契約日、契約者、借入金額、利息、事務手数料など。
 
