--- a/AI-102/lp06.md
+++ b/AI-102/lp06.md
@@ -151,6 +151,26 @@ Azure Bot Service
 ユーザー
 ```
 
+■参考: 主なチャンネル
+
+- Alexa
+- Azure Communication Services
+- LINE
+- Microsoft Teams
+- Slack
+- Webチャット
+
+■参考: SharePointからのチャットボット利用
+
+iframeを使用してSharePointページ内に「Webチャット」を埋め込むことで実現可能。
+
+https://learn.microsoft.com/en-us/answers/questions/70877/sharepoint-channel-in-azure-bot-service
+
+https://www.youtube.com/watch?v=EonSHy6I5j4
+
+https://www.tatvasoft.com/blog/actuate-bot-features-within-sharepoint-framework/
+
+
 ■チャットボットの「チットチャット」 chit-chat とは？
 
 https://learn.microsoft.com/ja-jp/azure/cognitive-services/language-service/question-answering/how-to/chit-chat
