--- a/AI-102/lp11.md
+++ b/AI-102/lp11.md
@@ -29,7 +29,7 @@ https://learn.microsoft.com/ja-jp/training/paths/implement-knowledge-mining-azur
 - [スキル](azure-ai-search/skill.md)
   - AIエンリッチメントを実現するしくみ
 - [カスタムスキル](azure-ai-search/custom-skill.md)
-  - 独自のエンリッチメントを実装するしくみ
+  - 独自のエンリッチメントを自作するしくみ
 
 ■ラボ
 
