--- a/AI-102/lp09.md
+++ b/AI-102/lp09.md
@@ -1,4 +1,4 @@
-# ラーニングパス09 Azure Cognitive Services でコンピューター ビジョン ソリューションを作成する
+# ラーニングパス09 Azure AI Services でコンピューター ビジョン ソリューションを作成する
 
 https://learn.microsoft.com/ja-jp/training/paths/create-computer-vision-solutions-azure-cognitive-services/
 
@@ -39,10 +39,7 @@ https://learn.microsoft.com/ja-jp/azure/cognitive-services/computer-vision/conce
 
 画像内の人間の顔を検出。
 
-検出されたそれぞれの顔に対し:
-- 年齢を判定
-- 性別を判定
-- 座標を生成(top/left/width/height)。
+検出されたそれぞれの顔に対し、座標を生成(top/left/width/height)。
 
 ■Face APIについて
 
