--- a/AZ-104-2023/lp06.md
+++ b/AZ-104-2023/lp06.md
@@ -6,6 +6,7 @@
 
 - [メトリックとログ](../AZ-303/pdf/mod15/メトリックとログの例.pdf)
 - [Azure Monitor](../AZ-104/pdf/mod11/Azure%20Monitor.pdf)
+- [Azure Network Watcher](../AZ-104/pdf/mod11/Network%20Watcher.pdf)
 - [ラボ11: モニタリングを実装する](lab11cs.md)
 
 ## バックアップ
